Added two more recipe images to images folder. Added ul style attributes to styles.css

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@ body{
     background-color: antiquewhite;
 }
 
-
-
+ul{
+    font-size: large;
+    
+}
 .centerImage{
     display:block;
     margin-left: auto;
