--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,31 @@ ul{
     font-size: large;
     
 }
+
+a:link{
+    color: green;
+    Background-color: transparent;
+    Text-decoration: underline;
+  }
+  a:visited {
+    Color: rgb(30, 255, 0);
+     Background-color: transparent;
+     Text-decoration: underline;
+  }
+  
+  a:hover{
+     Color: yellow;
+     background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  a:active { 
+     Color: pink;
+     background-color: transparent;
+    text-decoration: underline;
+  
+  }
+  
 .centerImage{
     display:block;
     margin-left: auto;
