Added ol (Ordered List) attributes to stylsheet with same properties as ul for now.

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@ ul{
     font-size: large;
     
 }
-
+ol{
+    font-size: large;
+}
 a:link{
     color: blue;
     Background-color: transparent;
