Added paragraph attributes to styles.css since I realized lots of the styles I was using were all the same except for center text. So by using the stylesheet, it makes it easier and less redundant. Also, removed all the redundant inline styles from the paragraph tags.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,11 @@ h1{
 body{
     background-color: antiquewhite;
 }
-
+p{
+    text-align:center; 
+    font-weight: bold; 
+    font-size: larger;
+}
 ul{
     font-size: large;
     
