--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
+
+body{
+    background-color: rgba(250, 235, 215, 50%);
+    
+}
+
 h1{
     text-align:center; 
     font-family: 'Brush Script MT', cursive;
     font-size: 45px;
 }
 
-body{
-    background-color: antiquewhite;
-}
 p{
     text-align:center; 
     font-weight: bold; 
